[gd_scene load_steps=19 format=3 uid="uid://ddgcwp74rtv0o"]

[ext_resource type="Script" uid="uid://d1gmq48v1iuth" path="res://objects/hook.gd" id="1_u38fj"]
[ext_resource type="Texture2D" uid="uid://cb6xdxcj7gp0" path="res://assets/sprites/hooks/default.png" id="2_7327f"]
[ext_resource type="PackedScene" uid="uid://cks1yu28jgvtk" path="res://objects/vfx/water_splash.tscn" id="2_h8oud"]
[ext_resource type="Texture2D" uid="uid://c0uy6y2kg7m1d" path="res://assets/sprites/bubbles.png" id="3_y7fkd"]
[ext_resource type="Texture2D" uid="uid://sg65gjnmf13v" path="res://assets/sprites/particles/hook_wind.png" id="4_d1hv7"]
[ext_resource type="Script" uid="uid://cuue7n3c55b7y" path="res://objects/combo_detector.gd" id="5_a1qhw"]
[ext_resource type="AudioStream" uid="uid://d1om2h7aexgdg" path="res://assets/sfx/sfx_throw.wav" id="7_25xtu"]

[sub_resource type="GDScript" id="GDScript_7gc16"]
resource_name = "hook_visible"
script/source = "extends Node2D

func increase_radius(multiplier : float):
	scale = scale * multiplier
	pass

func reset_radius():
	scale = Vector2.ONE
	pass
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y5oe2"]
size = Vector2(124, 28)

[sub_resource type="GDScript" id="GDScript_f1gw2"]
resource_name = "hook_camera"
script/source = "extends Camera2D

func _ready() -> void:
	GameManager.end_day.connect(on_end_of_day)

func on_end_of_day(_fishes):
	var tween : Tween = get_tree().create_tween()
	tween.tween_property(self, \"offset\", Vector2(300,0), 0.5).set_ease(Tween.EASE_IN)
	tween.play()
	zoom_to(Vector2.ONE * 1.2, 0.5)
	pass

func zoom_hook_water():
	zoom_to(Vector2.ONE * 0.7, 0.3)
	pass

func zoom_hook_idle():
	zoom_to(Vector2.ONE, 0.3)
	pass

func zoom_to(new_zoom : Vector2, duration : float):
	var tween : Tween = get_tree().create_tween()
	tween.tween_property(self, \"zoom\", new_zoom, duration).set_ease(Tween.EASE_IN)
	tween.play()
	pass
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gdo6i"]
size = Vector2(62, 35)

[sub_resource type="GDScript" id="GDScript_5jxao"]
resource_name = "fish_detector"
script/source = "extends Area2D

@export var collision_shape : CollisionShape2D
var shape : CircleShape2D
var initial_radius : float

func _ready() -> void:
	shape = collision_shape.shape as CircleShape2D
	initial_radius = shape.radius
	pass

func set_new_radius(new_radius : float):
	collision_shape.shape.radius = new_radius
	pass

func increase_radius(multiplier : float):
	collision_shape.shape.radius *= multiplier
	pass

func reset_radius():
	collision_shape.shape.radius = initial_radius
	pass
"

[sub_resource type="CircleShape2D" id="CircleShape2D_uipdx"]
radius = 20.0

[sub_resource type="Curve" id="Curve_m3dio"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.752809, 0), -2.87654, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_d7etg"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.995495, 0.021978), -1.5102, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_c4wcl"]
offsets = PackedFloat32Array(0, 0.283505, 0.865979, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GDScript" id="GDScript_h8oud"]
resource_name = "water_splash"
script/source = "extends CPUParticles2D

@onready var animation_player: AnimationPlayer = $AnimationPlayer

func play():
	animation_player.play(\"show\")
	pass
"

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_iamd1"]
random_pitch = 2.0
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("7_25xtu")

[node name="Hook" type="CharacterBody2D" node_paths=PackedStringArray("skin", "wind") groups=["hook"]]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_u38fj")
skin = NodePath("Visible/Skin")
wind = NodePath("Wind")

[node name="Visible" type="Node2D" parent="." groups=["hook"]]
script = SubResource("GDScript_7gc16")

[node name="Skin" type="Sprite2D" parent="Visible"]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("2_7327f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_y5oe2")

[node name="Camera" type="Camera2D" parent="."]
position_smoothing_enabled = true
script = SubResource("GDScript_f1gw2")

[node name="WaterDetection" type="Area2D" parent="."]
position = Vector2(9, 0)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterDetection"]
position = Vector2(33, -1.5)
shape = SubResource("RectangleShape2D_gdo6i")
debug_color = Color(0, 0.564706, 0.87451, 0.278431)

[node name="FishDetector" type="Area2D" parent="." node_paths=PackedStringArray("collision_shape") groups=["hook"]]
position = Vector2(9, 0)
collision_mask = 4
script = SubResource("GDScript_5jxao")
collision_shape = NodePath("CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FishDetector" groups=["hook"]]
position = Vector2(35, -1)
shape = SubResource("CircleShape2D_uipdx")
debug_color = Color(0.964706, 0, 0.482353, 0.556863)

[node name="CollectableDetector" type="Area2D" parent="."]
visible = false
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectableDetector"]
position = Vector2(35, -1)
shape = SubResource("CircleShape2D_uipdx")
debug_color = Color(0.964706, 0, 0.482353, 0.556863)

[node name="Fishes" type="Node2D" parent="."]
position = Vector2(32, 1)

[node name="Collectables" type="Node2D" parent="."]
position = Vector2(51, 0)

[node name="Bubbles" type="CPUParticles2D" parent="."]
position = Vector2(58, 2)
emitting = false
texture = ExtResource("3_y7fkd")
direction = Vector2(-1, 0)
spread = 20.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 0.2
scale_amount_curve = SubResource("Curve_m3dio")

[node name="Wind" type="CPUParticles2D" parent="."]
position = Vector2(56, 2)
emitting = false
amount = 30
texture = ExtResource("4_d1hv7")
lifetime = 0.6
randomness = 1.0
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 4.0
direction = Vector2(-1, 0)
spread = 20.0
gravity = Vector2(0, 0)
initial_velocity_min = 200.0
initial_velocity_max = 300.0
angular_velocity_min = -720.0
angular_velocity_max = 10.95
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 0.5
scale_amount_curve = SubResource("Curve_d7etg")
color_ramp = SubResource("Gradient_c4wcl")

[node name="WaterSplash" parent="." instance=ExtResource("2_h8oud")]
script = SubResource("GDScript_h8oud")

[node name="ComboDetector" type="Node" parent="."]
script = ExtResource("5_a1qhw")

[node name="Throw" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_iamd1")
volume_db = 4.0
pitch_scale = 1.5
bus = &"SFx"

[connection signal="items_collected" from="." to="ComboDetector" method="_on_hook_items_collected"]
[connection signal="no_items_collected" from="." to="ComboDetector" method="_on_hook_no_items_collected"]
[connection signal="area_entered" from="WaterDetection" to="." method="_on_water_detection_area_entered"]
[connection signal="area_entered" from="FishDetector" to="." method="_on_fish_detector_area_entered"]
[connection signal="area_entered" from="CollectableDetector" to="." method="_on_collectable_detector_area_entered"]
